/* English */ Restructured Hebrew letter section <he#5747>

--- a/wiki/he.wikitext
+++ b/wiki/he.wikitext
@@ -43,7 +43,6 @@ The third person singular, masculine, nominative case. (''Accusative'': [[him]],
 *Italian: [[lui#Italian|lui]], [[egli]]
 *:'''Note:''' ''Usually omitted, except for emphasis or to avoid confusion.''
 *Japanese: [[彼]] ([[かれ]], káre)
-*[[Lingua Franca Nova]]: [[le]]
 *Norwegian: [[han]]
 *Portuguese: [[ele]]
 *[[Persian]]: [[او]] (u) (''both male and female'')
@@ -61,19 +60,15 @@ The third person singular, masculine, nominative case. (''Accusative'': [[him]],
 *Vietnamese: [[ông ấy]], [[nó]], [[anh]], [[anh ấy]]
 *[[!Xũ]]: [[ha#!Xũ|ha]] (''both male and female'')
 *[[Yoruba]]: [[ó]], [[á]] (''both male and female'')
-
+----
 ===Pronunciation===
 * [[w:IPA|IPA]]: /heɪ:/
 * [[w:SAMPA|SAMPA]]: /he:/
-----
-* Letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1492;
-** Last: [[Daleth|&#1491;]]
-** Next: [[Vav|&#1493;]]
-
-===Noun===
+====Noun====
 '''he'''
-
-# The fifth letter of the Hebrew alphabet.
+#The fifth letter of the [[Wikipedia:Hebrew alphabet|Hebrew alphabet]]: &#1492;
+#* Last: [[Daleth|&#1491;]]
+#* Next: [[Vav|&#1493;]]
 
 ----
 
