religious; plural; rel -> der; +alt fr:, it: <nun#41108>

--- a/wiki/nun.wikitext
+++ b/wiki/nun.wikitext
@@ -6,10 +6,11 @@
 * [[w:AHD|AHD]]: nŭn
 
 ===Noun===
+'''nun''' (''plural'' '''nuns''')
 
-# a member of a community of women who live under certain vows
+#A member of a religious community of women who live by certain vows.
 
-====Related terms====
+====Derived terms====
 *[[nunnery]]
 
 ====Translations====
@@ -17,8 +18,9 @@
 *Catalan: [[monja]] ''f''
 *Esperanto: [[monaĥino]] ''f''
 *Finnish: [[nunna]]
-*French: [[religieuse]] ''f''
+*French: [[religieuse]] ''f'', [[sœur]] ''f''
 *German: [[Nonne]] ''f''
+*Italian: [[suora]] ''f''
 *Japanese: [[修道女]] (しゅうどうじょ, shudoujo), [[尼僧]] (にそう, nisou)
 *Slovak: [[mníška#Slovak|mníška]] ''f'', [[rehoľníčka#Slovak|rehoľníčka]] ''f''
 *Slovene: [[nuna]] ''f''
