+alt translation & syn <sœur#49951>

--- a/wiki/s%C5%93ur.wikitext
+++ b/wiki/s%C5%93ur.wikitext
@@ -3,3 +3,7 @@
 '''sœur''' ''f'' (''plural'' '''sœurs''')
 
 #[[sister]]
+#[[nun]]
+
+====Synonyms====
+*(''nun''): [[religeuse]] ''f'', [[nonne]] ''f''
