--- a/wiki/nun.wikitext
+++ b/wiki/nun.wikitext
@@ -18,7 +18,7 @@
 *Catalan: [[monja]] ''f''
 *Esperanto: [[monaĥino]] ''f''
 *Finnish: [[nunna]]
-*French: [[religieuse]] ''f'', [[sœur]] ''f''
+*French: [[religieuse]] ''f'', [[sœur]] ''f'', [[nonne]] ''f''
 *German: [[Nonne]] ''f''
 *Italian: [[suora]] ''f''
 *Japanese: [[修道女]] (しゅうどうじょ, shudoujo), [[尼僧]] (にそう, nisou)
