/* Noun */ - lower case <samekh#65370>

--- a/wiki/samekh.wikitext
+++ b/wiki/samekh.wikitext
@@ -5,7 +5,6 @@
 ** Next: [[Ayin|&#1506;]]
 
 ===Noun===
-
-'''Samekh''', also '''Samech''' or '''Samek'''
+'''samekh''', also '''samech''' or '''samek'''
 
 # The fifteenth letter of the Hebrew alphabet.
