--- a/wiki/PE.wikitext
+++ b/wiki/PE.wikitext
@@ -5,17 +5,17 @@
 ** Next: [[Sadhe|&#1510;]]
 
 ===Noun===
-
 '''pe'''
 
 # The seventeenth letter of the Hebrew alphabet.
 
+----
 ==Tok Pisin==
-
 ===Etymology===
-: English ''[[pay]]''
+English ''[[pay]]''
 
 ===Noun===
+'''pe'''
 
-# Payment.
-# Salary.
+#[[payment]]
+#[[salary]]
