--- a/wiki/grid.wikitext
+++ b/wiki/grid.wikitext
@@ -4,7 +4,7 @@ Noun:
 #A series of squares marked off on paper, such as a [[crossword]] puzzle. 
 #A system for delivery of electricity, consisting of various substations, transformers and generators, connected by wire.
 #:''You can't turn off the building from here, you have to shut down the whole '''grid'''.'' - Power technician in the movie, ''[[w:Die Hard|Die Hard]]''.
-#A system or structure of distributed computers working mostly on a Peer-2-Peer basis, sutrch structures are known as a computational grid or simply grid computing. These systems are mostly used to solve a single and complex scientific or technical problem, or to process data at high speeds (as in clusters).  
+#A system or structure of distributed computers working mostly on a Peer-2-Peer basis, such structures are known as a computational grid or simply grid computing. These systems are mostly used to solve a single and complex scientific or technical problem, or to process data at high speeds (as in clusters).  
 #A method of marking off [[maps]] into areas.
 
 See Also: [[square]], [[rectangle]].
