modified def; +plural, "somewhat derogatory" label <drunkard#48876>

--- a/wiki/drunkard.wikitext
+++ b/wiki/drunkard.wikitext
@@ -1,5 +1,5 @@
 ==English==
-
 ===Noun===
+'''drunkard''' (''plural'' '''drunkard''')
 
-# An [[alcoholic]]
+#(''somewhat derogatory'') A person who is habitually drunk.<!--not the same as an alcoholic, who is addicted to alcohol but might rarely or never be drunk-->
