--- a/wiki/chick.wikitext
+++ b/wiki/chick.wikitext
@@ -4,7 +4,7 @@
 
 #(''Zoology'') A young [[bird]].
 #(''specifically'') A young [[chicken]].
-#(''slang'') A woman.
+#(''slang'') A (beautiful) woman.
 
 ====Translations====
 *[[Bosnian]]: [[pile]] ''n'', [[pilad]] ''pl''
