--- a/wiki/Netherlands.wikitext
+++ b/wiki/Netherlands.wikitext
@@ -8,7 +8,7 @@ From [[nether]], lower + [[land]]s, the country being very low-lying, with some 
 #A country in north western [[Europe]] bordering [[Germany]] and [[Belgium]]. Official name: Kingdom of the Netherlands.
 
 ====Synonyms====
-*[[Holland]] (''although, strictly speaking, this is incorrect as Holland is one of the provinces of the Netherlands'')
+*[[Holland]] (''although, strictly speaking, this is incorrect as Holland is a region of the Netherlands'')
 *the [[Low Countries]]
 
 ====Translations====
