fmt; modified def; is this a proper noun? <cloze#65345>

--- a/wiki/cloze.wikitext
+++ b/wiki/cloze.wikitext
@@ -1,9 +1,12 @@
 =={{en}}==
 [[Category:English language]]
+===Etymology===
+From ''[[closure]]'', with ''s'' changed to the phonetically identical ''z''.
+
 ===Noun===
-'''cloze'''
+'''cloze'''<!--or is this a proper noun?-->
 
-# A reading comprehension test consisting of fill-in-the-blank questions.
+#A form of written examination technique in which candidates are required to provide words that have been omitted from sentences in order to demonstrate knowledge and comprehension.
 
-===See Also===
-[[w:Cloze|Wikipedia article on the Cloze technique]], including an example.
+===See also===
+*[[w:Cloze|Wikipedia article on cloze]]
