--- a/wiki/cloze.wikitext
+++ b/wiki/cloze.wikitext
@@ -6,7 +6,7 @@ From ''[[closure]]'', with ''s'' changed to the phonetically identical ''z''.
 ===Noun===
 '''cloze'''<!--or is this a proper noun?-->
 
-#A form of written examination technique in which candidates are required to provide words that have been omitted from sentences in order to demonstrate knowledge and comprehension.
+#A form of written examination technique in which candidates are required to provide words that have been omitted from sentences, thereby demonstrating their knowledge and comprehension of the text.
 
 ===See also===
 *[[w:Cloze|Wikipedia article on cloze]]
