+defs, usage note, quots <whereby#38850>

--- a/wiki/whereby.wikitext
+++ b/wiki/whereby.wikitext
@@ -1,3 +1,21 @@
+==English==
 ===Pronunciation===
 *wâr-bī', /weərˈbaɪ/, /we@r"baI/
 *hwâr-bī', /ʍeərˈbaɪ/, /We@r"baI/
+
+===Adverb===
+'''whereby'''
+
+#By which.
+#(''non-standardly'') Where.
+
+====Usage note====
+Use of '''whereby''' as a formal equivalent of ''where'' is non-standard and is avoided by careful speakers and writers, who use ''where'' or ''in which'' instead.
+
+====Quotations====
+
+(''by which''):
+*'''1990''': Other heads saw devolution as a whole new way of life and adopted an approach whereby the power of devolution was used to enable the school to drive the curriculum. &mdash; ''Local management of schools'', Kogan Page Ltd
+
+(''non-standard: where''):
+*'''1992''': This is an electronic system whereby executives are issued with small bleepers. &mdash; ''The hotel receptionist'', Paige, Jane and Paige, Grace, Cassell Educational
