+see also <whereby#38850>

--- a/wiki/whereby.wikitext
+++ b/wiki/whereby.wikitext
@@ -19,3 +19,7 @@ Use of '''whereby''' as a formal equivalent of ''where'' is non-standard and is 
 
 (''non-standard: where''):
 *'''1992''': This is an electronic system whereby executives are issued with small bleepers. &mdash; ''The hotel receptionist'', Paige, Jane and Paige, Grace, Cassell Educational
+
+===See also===
+*[[hereby]]
+*[[thereby]]
