--- a/wiki/limousine.wikitext
+++ b/wiki/limousine.wikitext
@@ -8,7 +8,7 @@ French
 # A region of [[France]]
 
 ===Noun===
-'''limosuine'''
+'''Limosuine'''
 
 # An automobile body with seats and permanent [[top]] like a [[coupe]], and with the top projecting over the driver and a projecting front
 # An automobile with such a body.
