--- a/wiki/limousine.wikitext
+++ b/wiki/limousine.wikitext
@@ -15,7 +15,7 @@ French
 # A luxury sedan/saloon car, especially one with a lenghtened wheelbase or driven by a [[chauffeur]].
 
 ====Synonyms====
-*[[limo]]
+*[[limo]] (''Slang'')
 
 ----
 
