fmt <hang a left#65384>

--- a/wiki/hang_a_left.wikitext
+++ b/wiki/hang_a_left.wikitext
@@ -1,4 +1,5 @@
-(''American slang'') make a left turn
+==English==
+===Intransitive verb===
 
-Example:
-"Hang a left at the next intersection."
+#(''US, slang'') To turn left, to take a left turn.
+#:''Hang a left at the next intersection.''
