fmt, see also <hang a left#65384>

--- a/wiki/hang_a_left.wikitext
+++ b/wiki/hang_a_left.wikitext
@@ -3,3 +3,6 @@
 
 #(''US, slang'') To turn left, to take a left turn.
 #:''Hang a left at the next intersection.''
+
+===See also===
+*[[hang a right]]
