fmt <hang a right#65385>

--- a/wiki/hang_a_right.wikitext
+++ b/wiki/hang_a_right.wikitext
@@ -1,4 +1,8 @@
-(''American slang'') make a right turn
+==English==
+===Intransitive verb===
 
-Example:
-"Hang a right at the next intersection."
+#(''US, slang'') To turn right, to take a right turn.
+#:''Hang a right at the next intersection.''
+
+===See also===
+*[[hang a left]]
