fmt <Mersey sound#65366>

--- a/wiki/Mersey_sound.wikitext
+++ b/wiki/Mersey_sound.wikitext
@@ -1,1 +1,8 @@
-Mersey Sound. The name the media gave to the music created by Merseyside groups between 1958-1964. The most popular line-up comprised lead, rhythm and bass guitars and drums as popularised by the Beatles and the Searchers. It was also referred to as the Liverpool Sound.
+==English==
+===Proper noun===
+'''Mersey sound''' ''or'' '''Mersey Sound'''
+
+#A name for the characteristic style of music produced by [[pop group]]s from [[w:Merseyside|Merseyside]] between 1958 and 1964, typified by the [[w:The Beatles|Beatles]].
+
+====Synonyms====
+*[[Liverpool sound]]
