redirect <Mersey Sound#65414>

--- a/wiki/Mersey_sound.wikitext
+++ b/wiki/Mersey_sound.wikitext
@@ -1,8 +1,1 @@
-==English==
-===Proper noun===
-'''Mersey sound''' ''or'' '''Mersey Sound'''
-
-#A name for the characteristic style of music produced by [[pop group]]s from [[w:Merseyside|Merseyside]] between 1958 and 1964, typified by the [[w:The Beatles|Beatles]].
-
-====Synonyms====
-*[[Liverpool sound]]
+#REDIRECT [[Mersey sound]]
