conjugations of verb form are now links <shin#65383>

--- a/wiki/shin.wikitext
+++ b/wiki/shin.wikitext
@@ -24,7 +24,7 @@
 
 ===Verb===
 
-'''shin''' (shinned, shinning, shins)
+'''shin''' ([[shinned]], [[shinning]], [[shins]])
 
 # To climb a mast, tree, rope, or the like, by embracing it alternately with the arms and legs, without help of steps, spurs, or the like; -- used with up; as, to '''shin''' up a mast.
 
