fmt; what is the English for the Italian? <melissa#65343>

--- a/wiki/melissa.wikitext
+++ b/wiki/melissa.wikitext
@@ -1,15 +1,16 @@
 {{-en-}}
 ===Proper noun===
 '''Melissa'''
-# A female [[given name]].
+
+#A female [[given name]].
+#The "bee-nymph" in Greek mythology.
 
 ===See also===
-*[[w:melissa]]
+*[[w:Melissa|Wikipedia article on Melissa in Greek mythology]]
 
 ----
-
 ==Italian==
 ===Noun===
 '''melissa''' ''f''
 
-# a plant in [[Lamiaceae]]
+#a plant in [[Lamiaceae]]<!--what is this plant called in English?-->
