--- a/wiki/Gerippe.wikitext
+++ b/wiki/Gerippe.wikitext
@@ -1,6 +1,5 @@
 ==German==
 ===Noun===
-
 '''Gerippe''' (''plural'' '''Gerippes''')
 
-#A structural system of [[bone]]s in [[vertibrates]], '''[[skeleton]]'''
+#[[skeleton]]
