--- a/wiki/cloze.wikitext
+++ b/wiki/cloze.wikitext
@@ -4,9 +4,14 @@
 From ''[[closure]]'', with ''s'' changed to the phonetically identical ''z''.
 
 ===Noun===
-'''cloze'''<!--or is this a proper noun?-->
+'''cloze'''<!--or is this a proper noun? ... see discussion page -->
 
 #A form of written examination technique in which candidates are required to provide words that have been omitted from sentences, thereby demonstrating their knowledge and comprehension of the text.
+
+===Adjective===
+'''cloze'''
+
+#Based on or being a cloze.
 
 ===See also===
 *[[w:Cloze|Wikipedia article on cloze]]
