wikification; i think this page goes a little too far mixing the character and word perspectives <猪#20543>

--- a/wiki/%E7%8C%AA.wikitext
+++ b/wiki/%E7%8C%AA.wikitext
@@ -12,7 +12,7 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': pig, hog, wild boar
+* '''Common Meaning''': [[pig]], [[hog]], wild [[boar]]
 
 ----
 
@@ -74,9 +74,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== [[Korean]] Hanja ==
 
-* '''[[Hangeul]]''': 저
+* '''[[Hangeul]]''': [[저]]
 
 * '''[[Eumhun]] reading''': 
 
