improve alt forms; wikification <豬#27515>

--- a/wiki/%E8%B1%AC.wikitext
+++ b/wiki/%E8%B1%AC.wikitext
@@ -1,4 +1,6 @@
-* '''Alternate form''': [[猪]]
+* '''Alternate forms''':
+** [[猪]] (Simplified Chinese form)
+** [[猪]] <!-- z-variant? -->
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 152''': [[Wiktionary:Chinese radical index 豕|豕]]+9 strokes
 
@@ -12,11 +14,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': pig, hog
+* '''Common Meaning''': [[pig]], [[hog]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -35,7 +37,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ちょ]] (cho)
@@ -45,9 +47,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 저
+* '''[[Hangeul]]''': [[저]]
 
 * '''[[Eumhun]] reading''': 
 
