--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -58,10 +58,12 @@
 {|
 <!--left column-->
 *Arabic: [[شخص دنيء|شَخْصٌ دَنِيء]] (šáχʂun dániʔ) ''m''
-*Bulgarian: [[жалко същество]] (žalko säštestvo) ''n''
+*Bulgarian: [[негодник]] (negodnik) ''m'', [[жалко същество]] (žalko säštestvo) ''n''
+*Czech: [[ubožák]] ''m''
 *German: [[elender]] ''m'', [[elendes Wurm]]  ''n''
+*Italian: [[miserabile]] ''m and f''
 *Korean: [[비열한 인간]] (piyeolhan ingan)
-*Portuguese: [[miserável]] ''m and f'', [[desgraçado]] ''m''
+*Portuguese: [[miserável]] ''m and f'', [[patife]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -69,6 +71,8 @@
 <!--right column-->
 *Russian: [[стерва]] (stérva) ''m and f'', [[негодяй]] (negodjáj) ''m'', [[негодяйка]] (negodjájka) ''f''
 *Spanish: [[gusano]] ''m''
+*Swedish: [[kräk]]
+*Ukrainian: [[негідник]] (nehidnik) ''m''
 |}
 |}
 
