--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -47,7 +47,7 @@
 *Russian: [[червь]] (červ') ''m''
 *Slovene: [[črv]] ''m''
 *Spanish: [[gusano]]
-*Swedish: [[mask]]
+*Swedish: [[mask]] ''c''
 |}
 |}
 
@@ -63,15 +63,15 @@
 *German: [[elender]] ''m'', [[elendes Wurm]]  ''n''
 *Italian: [[miserabile]] ''m and f''
 *Korean: [[비열한 인간]] (piyeolhan ingan)
-*Portuguese: [[miserável]] ''m and f'', [[patife]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--right column-->
+*Portuguese: [[miserável]] ''m and f'', [[patife]] ''m''
 *Russian: [[стерва]] (stérva) ''m and f'', [[негодяй]] (negodjáj) ''m'', [[негодяйка]] (negodjájka) ''f''
 *Spanish: [[gusano]] ''m''
-*Swedish: [[kräk]]
+*Swedish: [[stackare]] ''c'', [[kräk]] ''n''
 *Ukrainian: [[негідник]] (nehidnik) ''m''
 |}
 |}
