--- a/wiki/majuscule_writing.wikitext
+++ b/wiki/majuscule_writing.wikitext
@@ -1,3 +1,4 @@
+{{rfd}}
 =={{En}}==
 ===Noun===
 # Writing composed wholly of [[capital letter]]s, especially the style which prevailed in [[Europe]] from the third to the sixth century.
