--- a/wiki/%E8%99%AB.wikitext
+++ b/wiki/%E8%99%AB.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#insects, worms
+*# [[insect]]s, [[worm]]s
 *# KangXi radical 142
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,11 +34,24 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[蟲]]
 
+===Compounds===
+*[[虫草]]
+*[[虫吃牙]]
+*[[虫害]]
+*[[虫胶]]
+*[[虫媒花]]
+*[[虫情]]
+*[[虫牙]]
+*[[虫眼]], [[虫眼儿]]
+*[[虫蚁]], [[虫蚁儿]]
+*[[虫灾]]
+*[[虫子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ちゅう]] (chū), [[き]] (ki)
