/* Noun */ improve english in def <prairie dog#52974>

--- a/wiki/prairie_dog.wikitext
+++ b/wiki/prairie_dog.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''[[prairie]] [[dog]]''' (''plural'' '''prairie dogs''')
 
-#A small, [[stout]]-bodied [[burrowing]] [[rodent]], having with shallow cheek pouches, native to [[North America]] and [[Central America]].
+#A small, [[stout]]-bodied [[burrowing]] [[rodent]] with shallow cheek pouches, native to [[North America]] and [[Central America]].
 
 ====Translations====
 *Dutch: [[prairiehond]]
