--- a/wiki/%E6%8E%8C.wikitext
+++ b/wiki/%E6%8E%8C.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': palm of hand, sole of foot, paw
+* '''Common Meaning''': [[palm]] of hand, [[sole]] of foot, [[paw]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,11 +26,32 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jeung2
 
+===Compounds===
+*[[掌秤]]
+*[[掌厨]]
+*[[掌灯]]
+*[[掌舵]]
+*[[掌骨]]
+*[[掌故]]
+*[[掌管]]
+*[[掌柜]]
+*[[掌权]]
+*[[掌上明珠]]
+*[[掌勺儿]]
+*[[掌声]]
+*[[掌事]]
+*[[掌纹]]
+*[[掌握]]
+*[[掌心]]
+*[[掌印]]
+*[[掌灶]]
+*[[掌嘴]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しょう]] (shō)
