--- a/wiki/crop.wikitext
+++ b/wiki/crop.wikitext
@@ -18,3 +18,6 @@
 
 # to occur, be present. ''crop up''
 # To cut something (usually a picture)
+
+==[[multilingual associations]]==
+*[[Russian]]: '''crop''' [[:ru:укроп|укроп]]а /ukropa/ (of [[dill]])
