--- a/wiki/crop.wikitext
+++ b/wiki/crop.wikitext
@@ -10,8 +10,8 @@
 # A short haircut.
 
 ====Translations====
-*Hebrew: [[יבול]]
-*Russian: [[урожай]] /uroZaj/
+*Hebrew: [[:he:יבול|יבול]]
+*Russian: [[:ru:урожай|урожай]] /uroZaj/
 
 ===Verb===
 '''to crop''' ([[crops]], [[cropped]], [[cropping]])
