--- a/wiki/%E9%9C%87.wikitext
+++ b/wiki/%E9%9C%87.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#shake, quake, tremor
-*# excite
+*# [[shake]], [[quake]], [[tremor]]
+*# [[excite]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,32 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jan3
 
+===Compounds===
+*[[震波]]
+*[[震颤]]
+*[[震荡]]
+*[[震动]]
+*[[震耳欲聋]]
+*[[震感]]
+*[[震古烁今]]
+*[[震骇]]
+*[[震撼]]
+*[[震级]]
+*[[震惊]]
+*[[震恐]]
+*[[震怒]]
+*[[震情]]
+*[[震慑]]
+*[[震天动地]]
+*[[震源]]
+*[[震灾]]
+*[[震中]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しん]] (shin)
