--- a/wiki/%E8%B4%A2.wikitext
+++ b/wiki/%E8%B4%A2.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': wealth, valuables, riches
+* '''Common Meaning''': [[wealth]], [[valuable]]s, [[rich]]es
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,41 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[財]]
+
+===Compounds===
+*[[财宝]]
+*[[财帛]]
+*[[财产]]
+*[[财产权]]
+*[[财大气粗]]
+*[[财东]]
+*[[财阀]]
+*[[财富]]
+*[[财赋]]
+*[[财货]]
+*[[财经]]
+*[[财会]]
+*[[财礼]]
+*[[财力]]
+*[[财路]]
+*[[财贸]]
+*[[财迷]]
+*[[财气]], [[财气儿]]
+*[[财权]]
+*[[财神]]
+*[[财势]]
+*[[财税]]
+*[[财团]]
+*[[财务]]
+*[[财物]]
+*[[财喜]]
+*[[财源]]
+*[[财运]]
+*[[财政]]
+*[[财政寡头]]
+*[[财政危机]]
+*[[财政资本]]
+*[[财主]]
 
 * '''Other info''': 
 
