--- a/wiki/%E8%90%88.wikitext
+++ b/wiki/%E8%90%88.wikitext
@@ -10,7 +10,7 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning'''
+* '''Common Meaning''': mountain goat (according to the Shuowen 說文)
 
 ----
 
