--- a/wiki/mid-autumn.wikitext
+++ b/wiki/mid-autumn.wikitext
@@ -2,3 +2,5 @@
 {{-noun-}}
 '''mid-autumn''' or '''midautumn'''
 # The middle of [[autumn]].
+{{-usage-}}
+[[Midsummer]] and [[Midwinter]] are usually always writ with no dash while '''mid-autumn''' or [[mid-fall]] and '''mid-spring''' are writ with a dash.
