--- a/wiki/drive.wikitext
+++ b/wiki/drive.wikitext
@@ -27,6 +27,7 @@ The original meaning was more like "to push".  The modern senses can all be seen
 *[[Finnish]]: [[ajaa]] (1, 2), [[ohjata]] (4)
 *[[German]]: [[fahren]] (1), [[treiben]] (2,3,5,6) [[antreiben]] (4)
 *Swedish: [[köra]] (1), [[driva]] (2,3,4)
+*[[Italian]]: [[guidare]] (1)
 
 === [[Intransitive]] verb ===
 
