--- a/wiki/sarcasm.wikitext
+++ b/wiki/sarcasm.wikitext
@@ -5,3 +5,11 @@
 '''sarcasm'''
 
 #A keen, reproachful expression; a satirical remark uttered with some degree of scorn or contempt; a taunt; a gibe; a cutting jest.
+
+==Expanded Definition==
+
+Sarcasm is the making of remarks intended to mock the person referred to (who is normally the person addressed), a situation or thing. It is often used in a humorous manner and expressed through particular vocal intonations. This is often done by simply over-emphasizing the actual statement, or particular words of it. Because it is vocally-oriented, sarcasm is often hard to pick up in written messages.
+
+The word comes from the Late Latin word, sarcasmus, which, in turn, comes from the Greek sarkasmos, from sarkazein - to bite the lips in rage,- from sarx, sark-, flesh.
+
+The term is often misused as a synonym for irony.
