--- a/wiki/drive.wikitext
+++ b/wiki/drive.wikitext
@@ -25,9 +25,9 @@ The original meaning was more like "to push".  The modern senses can all be seen
 
 *[[Bulgarian]]: [[шофирам]] (1), [[вкарвам]] (3), [[задвижвам]] (4)
 *[[Finnish]]: [[ajaa]] (1, 2), [[ohjata]] (4)
-*[[German]]: [[fahren]] (1), [[treiben]] (2,3,5,6) [[antreiben]] (4)
+*German: [[fahren]] (1), [[treiben]] (2,3,5,6) [[antreiben]] (4)
+*Italian: [[guidare]] (1)
 *Swedish: [[köra]] (1), [[driva]] (2,3,4)
-*[[Italian]]: [[guidare]] (1)
 
 === [[Intransitive]] verb ===
 
