--- a/wiki/kaf.wikitext
+++ b/wiki/kaf.wikitext
@@ -1,1 +1,14 @@
-#REDIRECT [[kaph]]
+==English==
+
+* Letter of the Arabic alphabet: ك
+** Last: [[ق]]
+** Next: [[ل]]
+
+===Noun===
+'''kaf'''
+
+# The twenty-second letter of the Arabic alphabet.
+#A variant spelling of '''[[kaph]]'''.
+
+===See also===
+*[[ك]]
