wikification; +zh compound <經#23375>

--- a/wiki/%E7%B6%93.wikitext
+++ b/wiki/%E7%B6%93.wikitext
@@ -14,12 +14,11 @@
 
 * '''Common Meaning'''
 *#classic works
-*# pass through
-
+*# [[pass through]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,11 +33,14 @@
 * '''Style''': [[Traditional Chinese]] 
 ** '''[[Simplified Chinese|Simplified]] equivalent''': [[经]]
 
+* '''Compounds''':
+** [[易經]] (yì jīng): [[I Ching]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けい]] (kei), [[きょう]] (kyō)
@@ -48,9 +50,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 경
+* '''[[Hangeul]]''': [[경]]
 
 * '''[[Eumhun]] reading''': 
 
