fmt; +pronunciation, hom & rhymes link <naval#42564>

--- a/wiki/naval.wikitext
+++ b/wiki/naval.wikitext
@@ -1,7 +1,13 @@
-===Adjective===
-'''naval''' (no comparative or superlative forms)
+==English==
+===Pronunciation===
+nā'vəl, /ˈneɪvəl/, /"neIv@l/
+*Homophones: [[navel]]
+*Rhymes: [[Rhymes:English:-eɪvəl|-eɪvəl]]
 
-# of or relating the the navy
+===Adjective===
+'''naval''' (''no [[comparative]] or [[superlative]]'')
+
+#Of or relating to a [[navy]].
 
 ====Related terms====
 *[[navy]]
