--- a/wiki/naval.wikitext
+++ b/wiki/naval.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Pronunciation===
-nā'vəl, /ˈneɪvəl/, /"neIv@l/
+nā'vəl, /ˈneɪvəl/, /<tt>"neIv@l</tt>/
 *Homophones: [[navel]]
 *Rhymes: [[Rhymes:English:-eɪvəl|-eɪvəl]]
 
