--- a/wiki/%E8%82%89.wikitext
+++ b/wiki/%E8%82%89.wikitext
@@ -31,6 +31,47 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': yuk6
 
+===Compounds===
+*[[肉案]]
+*[[肉饼]]
+*[[肉搏]]
+*[[肉搏战]]
+*[[肉畜]]
+*[[肉丁]]
+*[[肉嘟嘟]], [[肉嘟嘟的]]
+*[[肉墩墩]], [[肉敦敦]]
+*[[肉感]]
+*[[肉红]]
+*[[肉呼呼]], [[肉乎乎]]
+*[[肉鸡]]
+*[[肉瘤]]
+*[[肉麻]]
+*[[肉囊囊]]
+*[[肉牛]]
+*[[肉排]]
+*[[肉皮]]
+*[[肉皮儿]]
+*[[肉票]], [[肉票儿]]
+*[[肉禽]]
+*[[肉色]]
+*[[肉身]]
+*[[肉食]]
+*[[肉丝]]
+*[[肉松]]
+*[[肉体]]
+*[[肉痛]]
+*[[肉头]]
+*[[肉馅]], [[肉馅儿]]
+*[[肉刑]]
+*[[肉眼]]
+*[[肉眼凡胎]]
+*[[肉眼泡儿]]
+*[[肉用鸡]]
+*[[肉欲]]
+*[[肉质]]
+*[[肉中刺]]
+*[[肉猪]]
+
 * '''Other info''': 
 
 ----
