--- a/wiki/%E8%A3%95.wikitext
+++ b/wiki/%E8%A3%95.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': abundant, rich, plentiful
+* '''Common Meaning''': [[abundant]], [[rich]], [[plentiful]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,11 +26,18 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': yu6
 
+===Compounds===
+*[[裕固族]]
+*[[裕如]]
+*[[充裕]]
+*[[富裕]]
+*[[宽裕]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ゆう]] (yū), [[ゆ]] (yu)
