+adj & adv <mid-October#65430>

--- a/wiki/mid-October.wikitext
+++ b/wiki/mid-October.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[October]].
 
-{{-phrase-}}
+===Noun phrase===
 '''mid-October'''
-# Any day in the middle of [[October]].
+
+# Any time in the middle of [[October]].
+
+===Adjective===
+'''mid-October'''
+
+#Happening in the middle of October.
+
+===Adverb===
+'''mid-October'''
+
+#In the middle of October.
