--- a/wiki/mid-October.wikitext
+++ b/wiki/mid-October.wikitext
@@ -2,7 +2,7 @@
 {{-etym-}}
 From [[mid]], and [[October]].
 
-===Noun phrase===
+===Noun===
 '''mid-October'''
 
 # Any time in the middle of [[October]].
