--- a/wiki/%E7%BD%91.wikitext
+++ b/wiki/%E7%BD%91.wikitext
@@ -13,14 +13,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#net
-*# network
+*# [[net]]
+*# [[network]]
 *# KangXi radical 122
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -35,11 +35,32 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[網]]
 
+===Compounds===
+*[[网吧]]
+*[[网点]]
+*[[网兜]]
+*[[网纲]]
+*[[网巾]]
+*[[网具]]
+*[[网开三面]]
+*[[网篮]]
+*[[网漏吞舟]]
+*[[网络]]
+*[[网民]]
+*[[网膜]]
+*[[网屏]]
+*[[网球]]
+*[[网眼]]
+*[[网页]]
+*[[网站]]
+*[[网址]]
+*[[网子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ぼう]] (bō), [[もう]] (mō)
