--- a/wiki/Cina.wikitext
+++ b/wiki/Cina.wikitext
@@ -3,3 +3,13 @@
 '''Cina''' ''f''
 
 #[[China]]
+
+----
+==Italian==
+===Proper Noun===
+'''Cina''' ''f''
+
+#[[China]]
+
+===Related terms===
+*[[cinese]]
