--- a/wiki/Iran.wikitext
+++ b/wiki/Iran.wikitext
@@ -163,17 +163,21 @@ Catalan uses the article l' in front of Iran, but it doesn't use it in enumerati
 
 ----
 ==Italian==
-===Noun===
-
 ===Proper noun===
 '''Iran''' ''m''
 
-# Country in the Middle East. Official name: Islamic Republic of Iran.
+# Iran, country in the Middle East. Official name: Islamic Republic of Iran.
 
-====Translations====
-*English: Iran
+===Related terms===
+*[[iraniano]]
+*[[iranico]]
+*[[iranista]]
+
+===See also===
+*[[Persia]]
 
 ----
+
 ==Polish==
 ===Noun===
 
