--- a/wiki/%E6%AC%A7.wikitext
+++ b/wiki/%E6%AC%A7.wikitext
@@ -13,14 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#translit.: Europe
-*# ohm
+*# (''transliteration'') [[Europe]]
+*# [[ohm]]
 *# surname
-
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -39,7 +38,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[おう]] (ō)
