--- a/wiki/%E6%96%87.wikitext
+++ b/wiki/%E6%96%87.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': literature, culture, writing
+* '''Common Meaning''': [[literature]], [[culture]], [[writing]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,7 +30,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ぶん]] (bun), [[もん]] (mon)
@@ -40,9 +40,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 문
+* '''[[Hangeul]]''': [[문]]
 
 * '''[[Eumhun]] reading''': 
 
