--- a/wiki/%E5%8D%B0.wikitext
+++ b/wiki/%E5%8D%B0.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': print, seal, stamp, chop, mark
+* '''Common Meaning''': [[print]], [[seal]], [[stamp]], [[chop]], [[mark]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -30,7 +30,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[いん]] (in)
@@ -40,9 +40,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''Pronunciation''': 인, 끋
+* '''Pronunciation''': [[인]], [[끋]]
 
 * '''Romanization'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': in, kkeut
