--- a/wiki/%E6%A9%9F.wikitext
+++ b/wiki/%E6%A9%9F.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#machine
-*# moment, chance
-
+*#[[machine]]
+*# [[moment]], [[chance]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -38,7 +37,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[き]] (ki)
@@ -48,9 +47,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 기
+* '''[[Hangeul]]''': [[기]]
 
 * '''[[Eumhun]] reading''': 
 
