--- a/wiki/%E6%96%87.wikitext
+++ b/wiki/%E6%96%87.wikitext
@@ -36,6 +36,32 @@
 ** '''[[On]]''': [[ぶん]] (bun), [[もん]] (mon)
 ** '''[[Kun]]''': [[ふみ]] (fumi), [[あや]] (aya), [[かざる]] (kazaru)
 
+===Compounds===
+*[[文案]]
+*[[文意]]
+*[[文化]]
+*[[文官]]
+*[[文学]]
+*[[文句]]
+*[[文芸]]
+*[[文言]]
+*[[文豪]]
+*[[文才]]
+*[[文字]]
+*[[文書]]
+*[[文章]]
+*[[文身]]
+*[[文人]]
+*[[文責]]
+*[[文体]]
+*[[文筆]]
+*[[文法]]
+*[[文末]]
+*[[文脈]]
+*[[文民]]
+*[[文明]]
+*[[文面]]
+
 * '''Other info''':  
 
 ----
