--- a/wiki/%E8%9F%B2.wikitext
+++ b/wiki/%E8%9F%B2.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#worms
-*# insects
-
+*#[[worm]]s
+*# [[insect]]s
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -38,7 +37,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[き]] (ki), [[ちゅう]] (chū)
@@ -48,9 +47,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 충
+* '''[[Hangeul]]''': [[충]]
 
 * '''[[Eumhun]] reading''': 
 
