+adj & adv <mid-September#65432>

--- a/wiki/mid-September.wikitext
+++ b/wiki/mid-September.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[September]].
 
-{{-phrase-}}
+===Noun===
 '''mid-September'''
-# Any day in the middle of [[September]].
+
+# Any time in the middle of [[September]].
+
+===Adjective===
+'''mid-September'''
+
+#Happening in the middle of September.
+
+===Adverb===
+'''mid-September'''
+
+#In the middle of September.
