+adj & adv <mid-August#65440>

--- a/wiki/mid-August.wikitext
+++ b/wiki/mid-August.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[August]].
 
-{{-phrase-}}
+===Noun===
 '''mid-August'''
-# Any day in the middle of [[August]].
+
+# Any time in the middle of [[August]].
+
+===Adjective===
+'''mid-August'''
+
+#Happening in the middle of August.
+
+===Adverb===
+'''mid-August'''
+
+#In the middle of August.
