+adj & adv <mid-July#65439>

--- a/wiki/mid-July.wikitext
+++ b/wiki/mid-July.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[July]].
 
-{{-phrase-}}
+===Noun===
 '''mid-July'''
-# Any day in the middle of [[July]].
+
+# Any time in the middle of [[July]].
+
+===Adjective===
+'''mid-July'''
+
+#Happening in the middle of July.
+
+===Adverb===
+'''mid-July'''
+
+#In the middle of July.
