+adj & adv <mid-June#65438>

--- a/wiki/mid-June.wikitext
+++ b/wiki/mid-June.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[June]].
 
-{{-phrase-}}
+===Noun===
 '''mid-June'''
-# Any day in the middle of [[June]].
+
+# Any time in the middle of [[June]].
+
+===Adjective===
+'''mid-June'''
+
+#Happening in the middle of June.
+
+===Adverb===
+'''mid-June'''
+
+#In the middle of June.
