+adj & adv <mid-May#65437>

--- a/wiki/mid-May.wikitext
+++ b/wiki/mid-May.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[May]].
 
-{{-phrase-}}
+===Noun===
 '''mid-May'''
-# Any day in the middle of [[May]].
+
+# Any time in the middle of [[May]].
+
+===Adjective===
+'''mid-May'''
+
+#Happening in the middle of May.
+
+===Adverb===
+'''mid-May'''
+
+#In the middle of May.
