+adj & adv <mid-April#65436>

--- a/wiki/mid-April.wikitext
+++ b/wiki/mid-April.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[April]].
 
-{{-phrase-}}
+===Noun===
 '''mid-April'''
-# Any day in the middle of [[April]].
+
+# Any time in the middle of [[April]].
+
+===Adjective===
+'''mid-April'''
+
+#Happening in the middle of April.
+
+===Adverb===
+'''mid-April'''
+
+#In the middle of April.
