+adj & adv <mid-February#65434>

--- a/wiki/mid-February.wikitext
+++ b/wiki/mid-February.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[February]].
 
-{{-phrase-}}
+===Noun===
 '''mid-February'''
-# Any day in the middle of [[February]].
+
+# Any time in the middle of [[February]].
+
+===Adjective===
+'''mid-February'''
+
+#Happening in the middle of February.
+
+===Adverb===
+'''mid-February'''
+
+#In the middle of February.
