+adj & adv <mid-March#65435>

--- a/wiki/mid-March.wikitext
+++ b/wiki/mid-March.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[March]].
 
-{{-phrase-}}
+===Noun===
 '''mid-March'''
-# Any day in the middle of [[March]].
+
+# Any time in the middle of [[March]].
+
+===Adjective===
+'''mid-March'''
+
+#Happening in the middle of March.
+
+===Adverb===
+'''mid-March'''
+
+#In the middle of March.
