+adj & adv <mid-January#65433>

--- a/wiki/mid-January.wikitext
+++ b/wiki/mid-January.wikitext
@@ -2,6 +2,17 @@
 {{-etym-}}
 From [[mid]], and [[January]].
 
-{{-phrase-}}
+===Noun===
 '''mid-January'''
-# Any day in the middle of [[January]].
+
+# Any time in the middle of [[January]].
+
+===Adjective===
+'''mid-January'''
+
+#Happening in the middle of January.
+
+===Adverb===
+'''mid-January'''
+
+#In the middle of January.
