--- a/wiki/haiku.wikitext
+++ b/wiki/haiku.wikitext
@@ -1,7 +1,9 @@
 ==English==
-
 ===Noun===
 
 '''haiku'''
 
-#A three line Japanese poem.
+#A three line (5:7:5) Japanese poem.
+
+===Etymology===
+Japanese [[俳句]]
