+adj & adv <midsummer#65441>

--- a/wiki/midsummer.wikitext
+++ b/wiki/midsummer.wikitext
@@ -1,5 +1,16 @@
 {{-en-}}
 {{-noun-}}
 '''midsummer''' or '''mid-summer'''
-# The middle of the [[summer]].
+
+# The middle of [[summer]].
 # The [[summer solstice]]; about [[June]] 24th.
+
+===Adjective===
+'''midsummer''' or '''mid-summer'''
+
+#Happening in the middle of summer.
+
+===Adverb===
+'''midsummer''' or '''mid-summer'''
+
+#In the middle of summer.
