+adj & adv <midwinter#65443>

--- a/wiki/midwinter.wikitext
+++ b/wiki/midwinter.wikitext
@@ -3,3 +3,13 @@
 '''midwinter''' or '''mid-winter'''
 # The middle of [[winter]].
 # The [[winter solstice]]; about [[December]] 21st or 22nd.
+
+===Adjective===
+'''midwinter''' or '''mid-winter'''
+
+#Happening in the middle of winter.
+
+===Adverb===
+'''midwinter''' or '''mid-winter'''
+
+#In the middle of winter.
