fmt; deleted usage note (apparently not true - see dictionary.com for "mid-winter"); +syns <mid-autumn#65445>

--- a/wiki/mid-autumn.wikitext
+++ b/wiki/mid-autumn.wikitext
@@ -1,6 +1,24 @@
 {{-en-}}
 {{-noun-}}
 '''mid-autumn''' or '''midautumn'''
-# The middle of [[autumn]].
-{{-usage-}}
-[[Midsummer]] and [[Midwinter]] are usually always writ with no dash while '''mid-autumn''' or [[mid-fall]] and [[mid-spring]] are writ with a dash.
+
+#(''British'') The middle of [[autumn]].
+
+====Synonyms====
+*[[midfall]] (''US'')
+
+===Adjective===
+'''mid-autumn''' or '''midautumn'''
+
+#(''British'') Happening in the middle of autumn.
+
+====Synonyms====
+*[[midfall]] (''US'')
+
+===Adverb===
+'''mid-autumn''' or '''midautumn'''
+
+#(''British'') In the middle of autumn.
+
+====Synonyms====
+*[[midfall]] (''US'')
