--- a/wiki/gallicize.wikitext
+++ b/wiki/gallicize.wikitext
@@ -6,6 +6,6 @@ From Latin ''[[Gallicus]]'' (Latin for French) + English ''-ize''
 
 === Translations ===
 *[[Danish]]: [[snobbe for fransk]] (1); [[forfranske]] (2)
-*[[French]]: [[faire français]], [[traduire en français]]
+*French: [[faire français]], [[traduire en français]], [[franciser]]
 *[[Spanish]]: [[galicizar]], [[traducir en francés]]
-*[[Japanese]]: ''def. 1'' フランスのする (furansu no suru), ''def. 2'' フランス語に翻訳する(furansugo ni hon'yaku suru)
+*[[Japanese]]: ''def. 1'' [[フランス化]]する (furansu-ka-suru), ''def. 2'' [[フランス語]]に[[翻訳する]] (furansugo ni hon'yaku suru)
