+adj & adv; deleted usage note - apparently not true <mid-fall#65450>

--- a/wiki/mid-fall.wikitext
+++ b/wiki/mid-fall.wikitext
@@ -1,6 +1,24 @@
 {{-en-}}
 {{-noun-}}
 '''mid-fall''' or '''midfall'''
-# The middle of [[fall]].
-{{-usage-}}
-[[Midsummer]] and [[Midwinter]] are usually always writ with no dash while [[mid-autumn]] or '''mid-fall''' and [[mid-spring]] are writ with a dash.
+
+#(''US'') The middle of [[fall]].
+
+====Synonyms====
+*[[mid-autumn]] (''British'')
+
+===Adjective===
+'''mid-fall''' or '''midfall'''
+
+#(''US'') Happening in the middle of fall.
+
+====Synonyms====
+*[[mid-autumn]] (''British'')
+
+===Adverb===
+'''mid-fall''' or '''midfall'''
+
+#(''US'') In the middle of fall.
+
+====Synonyms====
+*[[mid-autumn]] (''British'')
