--- a/wiki/almighty.wikitext
+++ b/wiki/almighty.wikitext
@@ -17,4 +17,5 @@ IPA: [[WEAE]] /ɔlˈmaɪt.i/
 *[[might]]
 *[[mighty]]
 ====Translations====
+*Finnish: [[kaikkivaltias]] (1), [[kaikkivoipa]] (1)
 *{{ro}}: atotputernic ''m'', atotputernică ''f''
