--- a/wiki/develop.wikitext
+++ b/wiki/develop.wikitext
@@ -15,5 +15,5 @@
 
 ===Translations===
 *Finnish: [[kehittää]] (1,3,4), [[kehittyä]] (2)
-*Swedish: [[utveckla]]
+*Swedish: [[utveckla]] (1,2,3,5), [[framkalla]] (4)
 *Chinese: 发展
