--- a/wiki/brook.wikitext
+++ b/wiki/brook.wikitext
@@ -7,6 +7,8 @@
 *{{ia}}: [[rivo]]
 *{{pt}}: [[riacho]] ''m''
 *{{ro}}: [[pârâu]] ''n''
+*{{es}}: [[arroyo]] ''m''
+
 ===Transitive Verb===
 # To tolerate ("He does not ''brook'' any disobedience.")
 ====Translations====
