adj, adv; removed usage note <mid-spring#65448>

--- a/wiki/mid-spring.wikitext
+++ b/wiki/mid-spring.wikitext
@@ -2,5 +2,13 @@
 {{-noun-}}
 '''mid-spring''' or '''midspring'''
 # The middle of [[spring]].
-{{-usage-}}
-[[Midsummer]] and [[Midwinter]] are usually always writ with no dash while [[mid-autumn]] or [[mid-fall]] and '''mid-spring''' are writ with a dash.
+
+===Adjective===
+'''mid-spring''' or '''midspring'''
+
+#Happening in the middle of spring.
+
+===Adverb===
+'''mid-spring''' or '''midspring'''
+
+#In the middle of spring.
