--- a/wiki/buss.wikitext
+++ b/wiki/buss.wikitext
@@ -8,7 +8,7 @@
 
 # A [[kiss]].
 # An [[interface]] between [[card]]s or [[chip]]s composed of several [[electric]] [[conductor]]s (alternate spelling of ''[[bus]]'').
-# A type of shallow keeled Dutch fishing vessel approximately 50 feet long
+# A type of shallow keeled Dutch fishing boat used especially for herring fishing.
 
 ===Transitive Verb===
 
