/* Translations */ +Latin <heel#6243>

--- a/wiki/heel.wikitext
+++ b/wiki/heel.wikitext
@@ -14,6 +14,7 @@
 *[[Interlingua]]: [[calce]], [[talon]]
 *Japanese: [[踵]] ([[かかと]], kakato)
 *Korean: [[발뒤꿈치]] (balduekkumchi)
+*Latin: [[calx]] ''f''
 *Portuguese: [[calcanhar]] ''m''; [[salto]] ''m'' (of a shoe)
 *Spanish: [[talón]] ''m''
 *[[Tupinambá]]: [[pytá]]
