fmt; clarified def (not necessarily Japanese) <haiku#60397>

--- a/wiki/haiku.wikitext
+++ b/wiki/haiku.wikitext
@@ -1,9 +1,8 @@
 ==English==
-===Noun===
-
-'''haiku'''
-
-#A three line (5:7:5) Japanese poem.
-
 ===Etymology===
-Japanese [[俳句]]
+Japanese [[俳句]] (haiku)
+
+===Noun===
+'''haiku''' (''plural'' '''haikus''')
+
+#A three-line poem, the first and last lines of which contain five syllables and the second line seven.
