--- a/wiki/brook.wikitext
+++ b/wiki/brook.wikitext
@@ -4,10 +4,13 @@
 # A body of running water smaller than a [[river]].
 
 ====Translations====
+*Finnish: [[puro#Finnish|puro]], [[oja#Finnish|oja]]
+*German: [[Bach]] ''m''
 *{{ia}}: [[rivo]]
 *{{pt}}: [[riacho]] ''m''
 *{{ro}}: [[pârâu]] ''n''
 *{{es}}: [[arroyo]] ''m''
+*Swedish: [[bäck]] ''c''
 
 ===Transitive Verb===
 # To tolerate ("He does not ''brook'' any disobedience.")
