added information <Jove#65480>

--- a/wiki/Jove.wikitext
+++ b/wiki/Jove.wikitext
@@ -1,1 +1,1 @@
-'''Jove'''(noun)original name of the roman [[deity]],[[Jupiter]].
+'''Jove'''(noun)original name of the roman [[deity]],[[Jupiter]],in time, being the father in their [[pantheon]],he was called Father Jove which became [[Iupiter]]([[Jupiter]])
