/* Noun */ meanings: +(2) <calx#39913>

--- a/wiki/calx.wikitext
+++ b/wiki/calx.wikitext
@@ -13,6 +13,7 @@ Ancient Greek ''[[χάλιξ]]'' '''pebble'''
 ====Noun====
 '''calx, [[Wiktionary Appendix:Latin third declension|calcis]]''' ''f''
 #[[limestone]]
+#[[chalk]]
 #the [[finish line]]
 
 ====Derived terms====
