--- a/wiki/chalk.wikitext
+++ b/wiki/chalk.wikitext
@@ -79,6 +79,7 @@ Old English [[cealc]], borrowed from Latin [[calx]] "limestone", borrowed from A
 *German: [[Kreide]] ''f''
 *Indonesian: [[kapur tulis]]
 *Japanese: [[白亜]] ([[はくあ]], hakua, 1), [[白墨]] ([[はくぼく]], hakuboku, 2) [[チョーク]] (chōku, 1, 2), [[チャコ]] (chako, 3)
+*Latin: [[calx]] ''f''
 *Polish: [[kreda]] ''f'' (1,2)
 *Russian: [[мел]] (mjel) 
 *Spanish: [[creta]] ''f'' (1), [[tiza]] ''f'' (2)
