--- a/wiki/fall_in_love.wikitext
+++ b/wiki/fall_in_love.wikitext
@@ -13,6 +13,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--left column-->
+*Dutch: [[verliefd worden]]
 *French: [[tomber amoureux]] (''of a man or a person designated by a masculine noun''), tomber amoureuse (''of a woman or a person designated by a feminine noun'')
 |}
 | width=1% |
