--- a/wiki/pandebono.wikitext
+++ b/wiki/pandebono.wikitext
@@ -1,3 +1,3 @@
-'''Pandebono''' is a type of [[bread]] made out of [[corn]]/[[maize]]. It is sometimes eaten for [[breakfast]]. [[Arepas]] are also made out of corn; they are griddle cakes. Both of these are popular in [[Colombia]].
+'''Pandebono''' is a type of [[bread]] made out of [[maize]] (corn). It is sometimes eaten for [[breakfast]]. [[Arepas]] are also made out of corn; they are griddle cakes. Both of these are popular in [[Colombia]].
 
 {{stub}}
