--- a/wiki/calx.wikitext
+++ b/wiki/calx.wikitext
@@ -21,6 +21,35 @@ Ancient Greek ''[[χάλιξ]]'' '''pebble'''
 *[[calculator]]
 *[[calculus]]
 
+====Declension====
+Third declension; I-stem, base of 2 consonants (3:B2C).
+
+{| cellpadding="5" border="1"
+! ''Case \ #''
+! ''F.''
+! ''FF.''
+|-
+! ''Nominative''
+| <big> calx
+| <big> calc&#275;s
+|-
+! ''Genitive''
+| <big> calcis
+| <big> calcium
+|-
+! ''Dative''
+| <big> calc&#299;
+| <big> calcibus
+|-
+! ''Accusative''
+| <big> calcem
+| <big> calc&#275;s
+|-
+! ''Ablative''
+| <big> calce
+| <big> calcibus
+|}
+
 ===Etymology 2===
 Possibly from an extension of the Proto-Indo-European root ''*(s)kel-'' "to bend", whence also Greek ''[[σκέλος]]'' '''leg'''.
 
